# Ui-Password-Cracker

./: .gitignore  README.md  detect_field.py  main.py  pyproject.toml  typer.py
event/: event.py  player.py
tests/wordlist/: test_word_list.py
ui/: detect_field.py
wordlist/: generate.py  word_list.py
worldlist/: generate.py  word_list.py
